# ProjectCode

Algorithm/: APPROX.h  AbsAlgorithm.h  AbsAlgorithmSub.h  AdapPPA.h  CMakeLists.txt  NU_ACDM.cpp  NU_ACDM.h  PCDM.h  PPA.cpp  PPA.h  ParamAdapPPA.h  ParamPPA.h  main.cpp  sample.cpp  test.cpp
LP/: ADMM.m  ADMM1.m  ADMM2.m  ADMM3.m  ADMM4.m  APPROX.m  CG.cpp  CG.h  CG.m  CG_inv.m  CMakeLists.txt  LP.cpp  LP.h  LPuse.cpp  LPuse.h  LS_exact.h  NU_ACDM.cpp  NU_ACDM.h  NU_ACDM.m  Param.h  SSN.cpp  SSN.h  SSN.m  SVMtoLP.m  check_J.m  check_me.m  cvx.m  dataGen.m  dataRead.m  readVec.m  test.m  untitled5.m
LossFun/: AbsLoss.h  CMakeLists.txt  LossFunHeader.h  main.cpp  plus_squared_loss.h  squared_loss.h
Problem/: CMakeLists.txt  LP.cpp  ProbData.h  ProblemHeader.h
QuadProg/: CMakeCache.txt  Makefile  QuadProg++.cbp  cmake_install.cmake
QuadProg/src/: Makefile  cmake_install.cmake  main
SDNA/: CMakeLists.txt  GenInfo.cpp  GenInfo.h  Hinge.cpp  Hinge.h  L2LS.cpp  L2LS.h  LS.h  Losstest.cpp  Print.h  ProbParam.h  SDNAheader.h  main.cpp
lbfgsb/: lbfgsb.c  lbfgsb.h  x.lbfgsb_77_1  x.lbfgsb_77_2  x.lbfgsb_77_3
use/: CMakeLists.txt  DataGen.h  DataRW.h  Matrix.h  Output.h  Print.h  QuadProgFun.h  Sample.h  stdafx.h  test.cpp  usefun.h  useheader.h
